--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "mime-types": "^3.0.1",
     "next": "15.4.2",
     "next-auth": "5.0.0-beta.25",
+    "next-intl": "^4.3.4",
     "prisma": "^6.12.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
