--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "lint:fix": "next lint --fix"
+    "lint:fix": "next lint --fix",
+    "prisma:seed": "node prisma/seed.js"
   },
   "dependencies": {
+    "@faker-js/faker": "^10.0.0",
     "@hookform/resolvers": "^5.1.1",
     "@next/eslint-plugin-next": "^15.4.2",
     "@prisma/client": "^6.12.0",
@@ -19,6 +21,7 @@
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slider": "^1.3.5",
@@ -57,6 +60,8 @@
     "eslint": "^9.31.0",
     "eslint-config-next": "15.4.2",
     "tailwindcss": "^4.1.11",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.8.3"
   }
 }
