--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,8 +40,11 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
-#      - name: Run tests
-#        run: pnpm test
+      - name: Generate Prisma Client
+        run: pnpm prisma generate
+
+      #      - name: Run tests
+      #        run: pnpm test
       - name: Skip tests (no test script defined)
         run: echo "⚠️ Aucun test défini, étape ignorée."
 
