--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,8 +43,6 @@ jobs:
       - name: Generate Prisma Client
         run: pnpm prisma generate
 
-      #      - name: Run tests
-      #        run: pnpm test
       - name: Skip tests (no test script defined)
         run: echo "⚠️ Aucun test défini, étape ignorée."
 
@@ -92,13 +90,13 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           build-args: |
-            NEXT_PUBLIC_ENV=${{ github.base_ref }}
+            NEXT_PUBLIC_ENV=${{ inputs.environment || github.base_ref }}
 
   # 3️⃣ Deploy in dev
   deploy-dev:
     runs-on: ubuntu-latest
     needs: docker-build-push
-    if: ${{ github.event_name == 'workflow_dispatch' && inputs.environment == 'dev' }}
+    if: github.event_name == 'workflow_dispatch' && inputs.environment == 'dev'
     steps:
       - name: Manual DEV deployment
         run: echo "🔧 Déploiement DEV manuel déclenché par ${{ github.actor }}"
@@ -107,7 +105,7 @@ jobs:
   deploy-prod:
     runs-on: ubuntu-latest
     needs: docker-build-push
-    if: ${{ github.event_name == 'workflow_dispatch' && inputs.environment == 'prod' }}
+    if: github.event_name == 'workflow_dispatch' && inputs.environment == 'prod'
     steps:
       - name: Manual PROD deployment
         run: echo "🚀 Déploiement PROD manuel déclenché par ${{ github.actor }}"
