--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,14 +8,6 @@ on:
       - main
 
   workflow_dispatch:
-    inputs:
-      environment:
-        description: "Choose environment to deploy"
-        required: true
-        type: choice
-        options:
-          - dev
-          - prod
 
 jobs:
   # 1️⃣ Build & tests
@@ -90,13 +82,14 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           build-args: |
-            NEXT_PUBLIC_ENV=${{ inputs.environment || github.base_ref }}
+            NEXT_PUBLIC_ENV=${{ github.base_ref }}
 
   # 3️⃣ Deploy in dev
   deploy-dev:
     runs-on: ubuntu-latest
     needs: docker-build-push
-    if: github.event_name == 'workflow_dispatch' && inputs.environment == 'dev'
+    environment:
+      name: dev
     steps:
       - name: Manual DEV deployment
         run: echo "🔧 Déploiement DEV manuel déclenché par ${{ github.actor }}"
@@ -105,7 +98,8 @@ jobs:
   deploy-prod:
     runs-on: ubuntu-latest
     needs: docker-build-push
-    if: github.event_name == 'workflow_dispatch' && inputs.environment == 'prod'
+    environment:
+      name: prod
     steps:
       - name: Manual PROD deployment
         run: echo "🚀 Déploiement PROD manuel déclenché par ${{ github.actor }}"
