--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,10 +7,8 @@ on:
       - develop
       - main
 
-  workflow_dispatch:
-
 jobs:
-  # 1️⃣ Build & tests
+  # Build & tests
   build-and-test:
     runs-on: ubuntu-latest
 
@@ -41,8 +39,7 @@ jobs:
       - name: Build app
         run: pnpm build
 
-
-  # 2️⃣ Build & push Docker image
+  # Build & push Docker image
   docker-build-push:
     runs-on: ubuntu-latest
     needs: build-and-test
@@ -83,28 +80,3 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           build-args: |
             NEXT_PUBLIC_ENV=${{ github.base_ref }}
-
-  # 3️⃣ Deploy in dev (manual only)
-  deploy-dev:
-    runs-on: ubuntu-latest
-    needs: docker-build-push
-    if: false  # Toujours skipped par défaut
-    steps:
-      - name: Manual DEV deployment
-        run: echo "🔧 Déploiement DEV manuel déclenché par ${{ github.actor }}"
-
-  # 4️⃣ Deploy in prod (manual only, merge develop->main)
-  deploy-prod:
-    runs-on: ubuntu-latest
-    needs: docker-build-push
-    if: false  # Toujours skipped par défaut
-    steps:
-      - name: Check if merge develop to main
-        run: |
-          if [[ "${{ github.base_ref }}" != "main" ]] || [[ "${{ github.head_ref }}" != "develop" ]]; then
-            echo "❌ Ce déploiement n'est autorisé que pour un merge develop → main"
-            exit 1
-          fi
-
-      - name: Manual PROD deployment
-        run: echo "🚀 Déploiement PROD manuel déclenché par ${{ github.actor }}"
