--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -99,7 +99,9 @@ jobs:
   deploy-dev:
     runs-on: ubuntu-latest
     needs: docker-build-push
-    if: github.event_name == 'workflow_dispatch' && github.event.inputs.deploy_target == 'dev'
+    if: |
+      (github.event_name == 'workflow_dispatch' && github.event.inputs.deploy_target == 'dev') ||
+      (github.event_name == 'workflow_run' && contains(github.event.workflow_run.head_commit.message, '[deploy-dev]'))
     permissions:
       contents: read
       packages: read
