--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,26 +1,13 @@
-name: CI & Deploy
+name: [DEV] CI/CD
 
 on:
   pull_request:
     types: [opened, synchronize, reopened]
     branches:
       - develop
-      - main
-
-  workflow_dispatch:
-    inputs:
-      deploy_target:
-        description: "Environnement à déployer"
-        required: false
-        type: choice
-        options:
-          - none
-          - dev
-          - prod
-        default: none
 
 jobs:
-  # 1️⃣ Build & tests (toujours exécuté)
+  # 1️⃣ Build & tests
   build-and-test:
     runs-on: ubuntu-latest
 
@@ -52,7 +39,7 @@ jobs:
         run: pnpm build
 
 
-  # 2️⃣ Build & push Docker image (toujours exécuté)
+  # 2️⃣ Build & push Docker image
   docker-build-push:
     runs-on: ubuntu-latest
     needs: build-and-test
@@ -95,13 +82,10 @@ jobs:
             NEXT_PUBLIC_ENV=${{ github.base_ref }}
 
 
-  # 3️⃣ Deploy DEV (manuel uniquement)
+  # 3️⃣ Deploy DEV
   deploy-dev:
     runs-on: ubuntu-latest
     needs: docker-build-push
-    if: |
-      (github.event_name == 'workflow_dispatch' && github.event.inputs.deploy_target == 'dev') ||
-      (github.event_name == 'workflow_run' && contains(github.event.workflow_run.head_commit.message, '[deploy-dev]'))
     permissions:
       contents: read
       packages: read
@@ -122,38 +106,3 @@ jobs:
           echo "🔧 Déploiement DEV déclenché par ${{ github.actor }}"
           echo "📦 Image: ghcr.io/${{ github.repository }}:latest"
           # Ajoute ici tes commandes de déploiement DEV
-
-
-  # 4️⃣ Deploy PROD (manuel uniquement, branche main seulement)
-  deploy-prod:
-    runs-on: ubuntu-latest
-    needs: docker-build-push
-    if: github.event_name == 'workflow_dispatch' && github.event.inputs.deploy_target == 'prod'
-    permissions:
-      contents: read
-      packages: read
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Verify branch is main
-        run: |
-          if [[ "${{ github.ref }}" != "refs/heads/main" ]]; then
-            echo "❌ Le déploiement PROD n'est autorisé que depuis la branche main"
-            echo "Branche actuelle: ${{ github.ref }}"
-            exit 1
-          fi
-
-      - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Deploy to PROD
-        run: |
-          echo "🚀 Déploiement PROD déclenché par ${{ github.actor }}"
-          echo "📦 Image: ghcr.io/${{ github.repository }}:latest"
-          # Ajoute ici tes commandes de déploiement PROD
