--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -85,13 +85,13 @@ jobs:
 
   # 3️⃣ Deploy DEV
   deploy-dev:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     needs: docker-build-push
-    permissions:
-      contents: read
-      packages: read
 
     steps:
+      - name: Clean workspace
+        run: rm -rf *
+
       - name: Checkout code
         uses: actions/checkout@v4
 
@@ -102,8 +102,10 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Deploy to DEV
+      - name: Pull new image + restart stack
         run: |
-          echo "🔧 Déploiement DEV déclenché par ${{ github.actor }}"
-          echo "📦 Image: ghcr.io/${{ github.repository }}:latest"
-          # Ajoute ici tes commandes de déploiement DEV
+          echo "🔧 Deploying on the server..."
+          cd /home/baptiste/Dev/WPT/dev
+          docker compose pull
+          docker compose up -d --remove-orphans
+          echo "🚀 Deployed in DEV!"
