--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -106,6 +106,6 @@ jobs:
         run: |
           echo "🔧 Deploying on the server..."
           cd /home/baptiste/Dev/WPT/dev
-          docker compose pull
-          docker compose up -d --remove-orphans
+          docker-compose pull
+          docker-compose up -d --remove-orphans
           echo "🚀 Deployed in DEV!"
