--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -108,7 +108,7 @@ jobs:
           echo "🔧 Deploying on the server..."
           cd /home/baptiste/Dev/WPT/dev
           docker-compose pull
-          docker-compose down -v
+          docker rm -f wpt-dev_website || true
           docker-compose up -d --remove-orphans
           echo "🚀 Deployed in DEV!"
 
@@ -135,6 +135,6 @@ jobs:
           echo "🔧 Deploying on the server (PROD)..."
           cd /home/baptiste/Dev/WPT/prod
           docker-compose pull
-          docker-compose down -v
+          docker rm -f wpt_website || true
           docker-compose up -d --remove-orphans
           echo "🚀 Deployed in PROD!"
