--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -3,7 +3,7 @@ name: "PROD - CI/CD"
 on:
   push:
     tags:
-      - 'v*.*.*'  # Se déclenche sur les tags de version (ex: v1.0.0, v2.1.3)
+      - 'v*.*.*'
 
 jobs:
   # 1️⃣ Build & tests
@@ -104,8 +104,8 @@ jobs:
         run: |
           echo "🔧 Deploying on PROD..."
           cd /home/baptiste/Dev/WPT/prod
-          docker-compose pull
-          docker rm -f wpt_website || true
-          docker-compose up -d --no-deps wpt_website
-          docker-compose up -d --remove-orphans
+          docker-compose pull wpt_website
+          docker-compose stop wpt_website
+          docker-compose rm -f wpt_website
+          docker-compose up -d wpt_website
           echo "🚀 Deployed in PROD!"
