UPD - Add entrypoint script for Prisma migrations

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -109,6 +109,8 @@ jobs:
           echo "🔧 Deploying on DEV..."
           cd /home/baptiste/Dev/WPT/dev
           docker-compose pull
-          docker rm -f wpt-dev_website || true
+          # stop + remove DEV containers ONLY (keeps volumes)
+          docker-compose down
+          # recreate containers, reusing existing volumes
           docker-compose up -d --remove-orphans
           echo "🚀 Deployed in DEV!"
