--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -12,7 +12,6 @@ on:
       - main
 
 jobs:
-  # 1️⃣ Build & tests
   build-and-test:
     runs-on: ubuntu-latest
 
@@ -43,7 +42,6 @@ jobs:
       - name: Build app
         run: pnpm build
 
-  # SonarQube Scan
   sonar-scan:
     needs: build-and-test
     runs-on: ubuntu-latest
@@ -81,11 +79,10 @@ jobs:
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
         with:
           args: >
-            -Dsonar.projectKey=wpt
-            -Dsonar.projectName=WPT
-            -Dsonar.javascript.lcov.reportPaths=./coverage/lcov.info
+            -sonar.projectKey=wpt
+            -sonar.projectName=WPT
+            -sonar.javascript.lcov.reportPaths=./coverage/lcov.info
 
-  # 2️⃣ Build & push Docker image
   docker-build-push:
     runs-on: ubuntu-latest
     needs: build-and-test
@@ -127,7 +124,6 @@ jobs:
           build-args: |
             NEXT_PUBLIC_ENV=develop
 
-  # 3️⃣ Deploy DEV
   deploy-dev:
     runs-on: self-hosted
     needs: docker-build-push
