--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -73,7 +73,7 @@ jobs:
         run: pnpm exec jest --runInBand --coverage --coverage-reporters=lcov --passWithNoTests
 
       - name: SonarQube Scan
-        uses: SonarSource/sonarcloud-github-action@v2.2.0
+        uses: SonarSource/sonar-scanner-action@master
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
@@ -81,7 +81,6 @@ jobs:
           args: >
             -Dsonar.projectKey=WPT
             -Dsonar.projectName=WPT
-            -Dsonar.organization=WPT
             -Dsonar.javascript.lcov.reportPaths=./coverage/lcov.info
 
   docker-build-push:
