--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -73,15 +73,15 @@ jobs:
         run: pnpm exec jest --runInBand --coverage --coverage-reporters=lcov --passWithNoTests
 
       - name: SonarQube Scan
-        uses: SonarSource/sonarqube-scan-action@7295e71c9583053f5bf40e9d4068a0c974603ec8
+        uses: SonarSource/sonarqube-scan-action@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
         with:
-          args:
+          args: >
             -Dsonar.projectKey=WPT
-#            -Dsonar.javascript.lcov.reportPaths=./coverage/lcov.info
+            -Dsonar.javascript.lcov.reportPaths=./coverage/lcov.info
 
   docker-build-push:
     runs-on: ubuntu-latest
